Revert "use stream"
This reverts commit 14748a9605d4bf2ba507e18942ae415325d28b21.