@@ -44,26 +44,29 @@ public class QuizQuestionServant {
     this.aiAdvisorService = aiAdvisorService;
   }
 
-  public Stream<Note> chooseFromCohort(Note answerNote, Predicate<Note> notePredicate) {
-    return randomizer.randomlyChoose(maxFillingOptionCount, getCohort(answerNote, notePredicate));
+  public List<Note> chooseFromCohort(Note answerNote, Predicate<Note> notePredicate) {
+    List<Note> list = getCohort(answerNote, notePredicate);
+    return randomizer.randomlyChoose(maxFillingOptionCount, list);
   }
 
-  public Stream<Note> getCohort(Note note, Predicate<Note> notePredicate) {
-    List<Note> list = note.getSiblings().filter(notePredicate).toList();
-    if (list.size() > 1) return list.stream();
+  public List<Note> getCohort(Note note, Predicate<Note> notePredicate) {
+    List<Note> list =
+        note.getSiblings().stream().filter(notePredicate).collect(Collectors.toList());
+    if (list.size() > 1) return list;
 
     return this.modelFactoryService
         .toNoteModel(note.getGrandAsPossible())
         .getDescendantsInBreathFirstOrder()
         .stream()
-        .filter(notePredicate);
+        .filter(notePredicate)
+        .collect(Collectors.toList());
   }
 
   private Optional<Link> chooseOneCategoryLink(Link link) {
     return randomizer.chooseOneRandomly(link.categoryLinksOfTarget(this.user));
   }
 
-  public <T> Stream<T> chooseFillingOptionsRandomly(Stream<T> candidates) {
+  public <T> List<T> chooseFillingOptionsRandomly(List<T> candidates) {
     return randomizer.randomlyChoose(maxFillingOptionCount, candidates);
   }
 
@@ -83,18 +86,25 @@ public class QuizQuestionServant {
     return cousinLinksOfSameLinkType.filter(l -> getReviewPoint(l.getThing()) != null);
   }
 
+  public List<ReviewPoint> getReviewPoints(Link link) {
+    ReviewPoint reviewPointFor = getReviewPoint(link.getThing());
+    if (reviewPointFor == null) return List.of();
+    return List.of(reviewPointFor);
+  }
+
   public ParentGrandLinkHelper getParentGrandLinkHelper(Link link) {
     Link parentGrandLink = chooseOneCategoryLink(link).orElse(null);
     if (parentGrandLink == null) return new NullParentGrandLinkHelper();
     return new ParentGrandLinkHelperImpl(this.user, link, parentGrandLink);
   }
 
-  public Stream<Note> chooseBackwardPeers(Link instanceLink, Link link1) {
+  public List<Note> chooseBackwardPeers(Link instanceLink, Link link1) {
     List<Note> instanceReverse = instanceLink.getLinkedSiblingsOfSameLinkType(user);
     List<Note> specReverse = link1.getLinkedSiblingsOfSameLinkType(user);
-    Stream<Note> backwardPeers =
+    List<Note> backwardPeers =
         Stream.concat(instanceReverse.stream(), specReverse.stream())
-            .filter(n -> !(instanceReverse.contains(n) && specReverse.contains(n)));
+            .filter(n -> !(instanceReverse.contains(n) && specReverse.contains(n)))
+            .collect(Collectors.toList());
     return chooseFillingOptionsRandomly(backwardPeers);
   }
 
@@ -103,30 +113,34 @@ public class QuizQuestionServant {
     return userModel.getReviewPointFor(thing);
   }
 
-  public Stream<Note> chooseFromCohortAvoidUncles(Link link1, Note answerNote) {
+  public List<Note> chooseFromCohortAvoidUncles(Link link1, Note answerNote) {
     List<Note> uncles = link1.getPiblingOfTheSameLinkType(user);
     return chooseCohortAndAvoid(answerNote, link1.getSourceNote(), uncles);
   }
 
-  private Stream<Note> chooseCohortAndAvoid(
+  private List<Note> chooseCohortAndAvoid(
       Note answerNote, Note noteToAvoid, List<Note> notesToAvoid) {
     return chooseFromCohort(
         answerNote,
         n -> !n.equals(answerNote) && !n.equals(noteToAvoid) && !notesToAvoid.contains(n));
   }
 
-  public List<Link> chooseLinkFromCohortAvoidSiblingsOfSameLinkType(Link link, Note answerNote) {
-    return chooseFromCohortAvoidSiblings(link, answerNote)
-        .flatMap(n -> n.getLinks().stream())
+  public List<Link> chooseLinkFromCohortAvoidSiblingsOfSameLinkType(Link link1, Note answerNote1) {
+    return chooseFromCohortAvoidSiblings(link1, answerNote1).stream()
+        .filter(n1 -> !n1.getLinks().isEmpty())
+        //                !new NoteViewer(user, n1)
+        //                    .linksOfTypeThroughDirect(List.of(link1.getLinkType()))
+        //                    .isEmpty())
+        .map(n -> n.getLinks().get(0))
         .collect(Collectors.toList());
   }
 
-  public Stream<Note> chooseFromCohortAvoidSiblings(Link link1, Note answerNote1) {
+  public List<Note> chooseFromCohortAvoidSiblings(Link link1, Note answerNote1) {
     List<Note> linkedSiblingsOfSameLinkType = link1.getLinkedSiblingsOfSameLinkType(user);
     return chooseCohortAndAvoid(answerNote1, link1.getTargetNote(), linkedSiblingsOfSameLinkType);
   }
 
-  public GlobalSettingsService getGlobalSettingsService() {
+  public GlobalSettingsService getGobalSettingsService() {
     return new GlobalSettingsService(modelFactoryService);
   }
 }
